--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li>
           <div class="nav-icon">
             <svg width="16" height="12">
-              <use href="/goit-markup-hw-04/images/icons.svg#icon-e-mail"></use>
+              <use href="images/icons.svg#icon-e-mail"></use>
             </svg>
             <a class="icon" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -43,9 +43,7 @@
         <li class="padding-tel">
           <div class="nav-icon">
             <svg width="10px" height="16px">
-              <use
-                href="/goit-markup-hw-04/images/icons.svg#icon-smartphone"
-              ></use>
+              <use href="images/icons.svg#icon-smartphone"></use>
             </svg>
             <a class="icon" href="tel:+1212-772-4150">+1 212-772-4150</a>
           </div>
@@ -53,18 +51,18 @@
       </ul>
     </header>
     <main>
-      <section class="head-section-style section">
-        <h1>EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
-        <button class="button-style">Request our service</button>
-      </section>
+      <div class="background-position">
+        <section class="head-section-style section">
+          <h1>EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
+          <button class="button-style">Request our service</button>
+        </section>
+      </div>
       <section class="info-section-style section">
         <ul class="container">
           <li>
             <div class="info-icon-background">
               <svg width="65" height="70">
-                <use
-                  href="/goit-markup-hw-04/images/icons.svg#icon-antenna"
-                ></use>
+                <use href="images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
             <h3>ATTENTION TO DETAILS</h3>
@@ -76,9 +74,7 @@
           <li>
             <div class="info-icon-background">
               <svg width="66" height="70">
-                <use
-                  href="/goit-markup-hw-04/images/icons.svg#icon-clock"
-                ></use>
+                <use href="images/icons.svg#icon-clock"></use>
               </svg>
             </div>
             <h3>PUNCTUALITY</h3>
@@ -90,9 +86,7 @@
           <li>
             <div class="info-icon-background">
               <svg width="70" height="70">
-                <use
-                  href="/goit-markup-hw-04/images/icons.svg#icon-diagram"
-                ></use>
+                <use href="images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
             <h3>PLANNING</h3>
@@ -104,9 +98,7 @@
           <li>
             <div class="info-icon-background">
               <svg width="70" height="70">
-                <use
-                  href="/goit-markup-hw-04/images/icons.svg#icon-astronaut"
-                ></use>
+                <use href="images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
             <h3>modern technologies</h3>
@@ -135,30 +127,22 @@
               <div class="font-style-position">Product Designer</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
-                  ></use>
+                  <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
-                  ></use>
+                  <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
-                  ></use>
+                  <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
-                  ></use>
+                  <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </figcaption>
@@ -170,30 +154,22 @@
               <div class="font-style-position">Frontend Developer</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
-                  ></use>
+                  <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
-                  ></use>
+                  <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
-                  ></use>
+                  <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
-                  ></use>
+                  <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </figcaption>
@@ -205,30 +181,22 @@
               <div class="font-style-position">Marketing</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
-                  ></use>
+                  <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
-                  ></use>
+                  <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
-                  ></use>
+                  <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
-                  ></use>
+                  <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </figcaption>
@@ -240,30 +208,22 @@
               <div class="font-style-position">UI Designer</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
-                  ></use>
+                  <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
-                  ></use>
+                  <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
-                  ></use>
+                  <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use
-                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
-                  ></use>
+                  <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </figcaption>
@@ -275,44 +235,32 @@
         <div class="container">
           <div class="company-icons">
             <svg width="106" height="60">
-              <use
-                href="/goit-markup-hw-04/images/icons.svg#icon-company-1"
-              ></use>
+              <use href="images/icons.svg#icon-company-1"></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use
-                href="/goit-markup-hw-04/images/icons.svg#icon-company-2"
-              ></use>
+              <use href="images/icons.svg#icon-company-2"></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use
-                href="/goit-markup-hw-04/images/icons.svg#icon-company-3"
-              ></use>
+              <use href="images/icons.svg#icon-company-3"></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use
-                href="/goit-markup-hw-04/images/icons.svg#icon-company-4"
-              ></use>
+              <use href="images/icons.svg#icon-company-4"></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use
-                href="/goit-markup-hw-04/images/icons.svg#icon-company-5"
-              ></use>
+              <use href="images/icons.svg#icon-company-5"></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use
-                href="/goit-markup-hw-04/images/icons.svg#icon-company-6"
-              ></use>
+              <use href="images/icons.svg#icon-company-6"></use>
             </svg>
           </div>
         </div>
@@ -333,30 +281,22 @@
               <li class="find-us-icons-placment">
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use
-                      href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
-                    ></use>
+                    <use href="images/icons.svg#icon-instagram"></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use
-                      href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
-                    ></use>
+                    <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use
-                      href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
-                    ></use>
+                    <use href="images/icons.svg#icon-facebook"></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use
-                      href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
-                    ></use>
+                    <use href="images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </div>
               </li>
