--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-03-portfolio</title>
+    <title>goit-markup-hw-05-portfolio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -27,9 +27,9 @@
           <li class="logo">
             <a href="index.html">Web<span class="logo-color">Studio</span></a>
           </li>
-          <li><a href="#" class="hover">Studio</a></li>
+          <li><a href="index.html" class="hover">Studio</a></li>
           <li class="padding-portfolio">
-            <a href="#" class="hover">Portfolio</a>
+            <a href="#" class="hover portfolio-visual">Portfolio</a>
           </li>
           <li><a href="#" class="hover">Contacts</a></li>
         </ul>
@@ -90,132 +90,222 @@
       </section>
       <section class="padding-settings section">
         <ul class="container img-wrap">
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio1.jpg"
-                alt="Technoduck"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Technoduck
-                <div>Web-site</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio2.jpg"
-                alt="Poster New Orlean vs Golden Star"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Poster New Orlean vs Golden Star
-                <div>Design</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio3.jpg"
-                alt="Seafood Restaurant"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Seafood Restaurant
-                <div>Apps</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio4.jpg"
-                alt="Project Prime"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Project Prime
-                <div>Marketing</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio5.jpg"
-                alt="Project Boxes"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Project Boxes
-                <div>Apps</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio6.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Inspiration has no Borders
-                <div>Web-site</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio7.jpg"
-                alt="Limited Edition"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Limited Edition
-                <div>Design</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio8.jpg"
-                alt="Project LAB"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Project LAB
-                <div>Marketing</div>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="img-box">
-              <img
-                class="no-gap"
-                src="images/portfolio9.jpg"
-                alt="Growing Business"
-                width="370"
-              />
-              <figcaption class="figcaption-padding box-border">
-                Growing Business
-                <div>Apps</div>
-              </figcaption>
-            </figure>
-          </li>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio1.jpg"
+                  alt="Technoduck"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Technoduck
+                  <div>Web-site</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio2.jpg"
+                  alt="Poster New Orlean vs Golden Star"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Poster New Orlean vs Golden Star
+                  <div>Design</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio3.jpg"
+                  alt="Seafood Restaurant"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Seafood Restaurant
+                  <div>Apps</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio4.jpg"
+                  alt="Project Prime"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Project Prime
+                  <div>Marketing</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio5.jpg"
+                  alt="Project Boxes"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Project Boxes
+                  <div>Apps</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio6.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Inspiration has no Borders
+                  <div>Web-site</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio7.jpg"
+                  alt="Limited Edition"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Limited Edition
+                  <div>Design</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio8.jpg"
+                  alt="Project LAB"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Project LAB
+                  <div>Marketing</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
+          <div class="overlay-hover">
+            <li class="box-overlay">
+              <p class="overlay">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+            </li>
+            <li>
+              <figure class="img-box">
+                <img
+                  class="no-gap"
+                  src="images/portfolio9.jpg"
+                  alt="Growing Business"
+                  width="370"
+                />
+                <figcaption class="figcaption-padding box-border">
+                  Growing Business
+                  <div>Apps</div>
+                </figcaption>
+              </figure>
+            </li>
+          </div>
         </ul>
       </section>
     </main>
