--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-04</title>
+    <title>goit-markup-hw-05</title>
     <link rel="stylesheet" href="css/modern-normalize.min.css" />
     <link href="css/styles.css" rel="stylesheet " />
     <link href="images/icons.svg" rel="stylesheet" />
@@ -22,7 +22,7 @@
           <li class="logo">
             <a href="#">Web<span class="logo-color">Studio</span></a>
           </li>
-          <li><a href="#" class="hover">Studio</a></li>
+          <li><a href="#" class="hover studio-visual">Studio</a></li>
           <li class="padding-portfolio">
             <a href="portfolio.html" class="hover">Portfolio</a>
           </li>
@@ -54,7 +54,9 @@
       <div class="background-position">
         <section class="head-section-style section">
           <h1>EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
-          <button class="button-style">Request our service</button>
+          <button data-modal-open class="button-style">
+            Request our service
+          </button>
         </section>
       </div>
       <section class="info-section-style section">
@@ -112,9 +114,34 @@
       <section class="about-us-style section">
         <h2>What we do</h2>
         <div class="container">
-          <img src="images/gr1.jpg" alt="working place1" width="370" />
-          <img src="images/gr2.jpg" alt="working place2" width="370" />
-          <img src="images/gr3.jpg" alt="working place3" width="370" />
+          <div class="img-position">
+            <img
+              src="images/gr1.jpg"
+              alt="working place1"
+              width="370"
+              height="294"
+            />
+            <p class="text-about-us">Aplikacje komputerowe</p>
+          </div>
+          <div class="img-position">
+            <img
+              class="img-position"
+              src="images/gr2.jpg"
+              alt="working place2"
+              width="370"
+              height="294"
+            />
+            <p class="text-about-us">Aplikacje mobilne</p>
+          </div>
+          <div class="img-position">
+            <img
+              src="images/gr3.jpg"
+              alt="working place3"
+              width="370"
+              height="294"
+            />
+            <p class="text-about-us">Rozwiązania graficzne</p>
+          </div>
         </div>
       </section>
       <section class="section-background img-size section">
@@ -313,5 +340,15 @@
         </address>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn-close" data-modal-close>
+          <svg width="11" height="11">
+            <use href="images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
