--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-05-portfolio</title>
+    <title>goit-markup-hw-06-portfolio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -315,7 +315,8 @@
           <li class="logo">
             <a href="#">Web<span class="footer-logo-color">Studio</span></a>
           </li>
-          <li><p class="find-us-style">find us on</p></li>
+          <li><p class="find-us-style">Dołącz do nas</p></li>
+          <li><p class="sub-style">Zapisz się do newslettera</p></li>
         </ul>
         <address class="address-padding">
           <ul class="address-style">
@@ -342,6 +343,24 @@
                     <use href="images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </div>
+              </li>
+              <li>
+                <form>
+                  <label class="sub-email-position">
+                    <input
+                      class="sub-email-input"
+                      type="email"
+                      name="email"
+                      placeholder="E-mail"
+                    />
+                  </label>
+                </form>
+              </li>
+              <li class="hnn">
+                <button class="sub-button" type="submit">Zapisz się</button>
+                <svg width="24" height="24" class="send-icon">
+                  <use href="/images/icons.svg#icon-send"></use>
+                </svg>
               </li>
             </div>
             <li>
