--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <li class="hnn">
                 <button class="sub-button" type="submit">Zapisz się</button>
                 <svg width="24" height="24" class="send-icon">
-                  <use href="/images/icons.svg#icon-send"></use>
+                  <use href="images/icons.svg#icon-send"></use>
                 </svg>
               </li>
             </div>
@@ -369,7 +369,7 @@
             >Name
             <div class="input-styling">
               <svg class="svg-name-position" width="18" height="18">
-                <use href="/images/icons.svg#icon-person"></use>
+                <use href="images/icons.svg#icon-person"></use>
               </svg>
               <input class="input-style" type="name" name="name" />
             </div>
@@ -378,7 +378,7 @@
             >Telephone
             <div class="input-styling">
               <svg class="svg-tel-position" width="18" height="18">
-                <use href="/images/icons.svg#icon-phone"></use>
+                <use href="images/icons.svg#icon-phone"></use>
               </svg>
               <input class="input-style" type="tel" name="telephone" />
             </div>
@@ -387,7 +387,7 @@
             >Email
             <div class="input-styling">
               <svg class="svg-email-position" width="18" height="18">
-                <use href="/images/icons.svg#icon-mail"></use>
+                <use href="images/icons.svg#icon-mail"></use>
               </svg>
               <input class="input-style" type="email" name="email" />
             </div>
@@ -408,7 +408,7 @@
               name="regulamin"
               value="regulamin"
             /><svg class="svg-check-position" width="16" height="15">
-              <use href="/images/icons.svg#icon-check"></use>
+              <use href="images/icons.svg#icon-check"></use>
             </svg>
             Oświadczam iż akceptuję&nbsp;<a class="link-style" href=""
               >Regulamin</a
